2011-05-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Fix a bug.

2011-05-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add winsav.el

2011-04-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add multi-term.el

2011-04-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind double-mouse-2 to semantic-ia-fast-jump-back.

	* init-site.el: Only capture (ctrl " ") in ibus-mode.

2011-04-01  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Don't capture f6-f12 in ibus-mode.

2011-03-24  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind some mouse event.

2011-03-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (and): Set mouse event for semantic.

	* init-misc.el ("tabbar"): Add tabbar-ruler.el

	* init-basic.el ("filecache"): Add filecache setting.

2011-03-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Let whitespace-style compatible with emacs-23.3
	Add find-func setting.

2011-03-10  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Enable auto-complete in comment.

	* init-basic.el (user-include-dirs): user-include-dirs also used
	by ffap.

2011-03-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (mark-current-line-mouse): Bind <left-margin>
	<mouse-1> to mark-current-line-mouse.

2011-03-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Only enable dired+ in window-system.

2011-02-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: User dark frame-background-mode for terminal.

2011-02-15  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el (minormode-sub-menu): Add iimage-mode menu.

2011-01-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-parentheses.
	autoload drag-stuff.

2011-01-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-symbol-mode-post-command.

2011-01-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable global-hl-line-mode in terminal.